# vk-to-commerceml

./: Dockerfile  LICENSE  README.md  compose.yaml  docker-compose.yml  pyproject.toml  run-tests
.github/workflows/: docker-image.yml
vk_to_commerceml/: app_state.py  cml_client.py  settings.py  vk_client.py  vk_models.py
vk_to_commerceml/api/: bot.py  main.py  oauth.py
vk_to_commerceml/bot/: connect.py  main.py  models.py  states.py  sync.py
vk_to_commerceml/infrastructure/: secrets.py
vk_to_commerceml/infrastructure/cml/: client.py  debug_file_saver.py  models.py
vk_to_commerceml/infrastructure/vk/: client.py  models.py
vk_to_commerceml/services/: csv_writer.py  sync.py
