[tool.poetry]
name = "vk-to-commerceml"
version = "0.1.0"
description = "Telegram bot that can synchronize VK products to a website using the CommerceML protocol"
authors = ["Alexey Vaganov <poofeg@gmail.com>"]
license = "MIT"
repository = "https://github.com/poofeg/vk-to-commerceml"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pydantic = "^2.9.2"
pydantic-xml = {version = "^2.14.0", extras = ["lxml"]}
pydantic-settings = "^2.6.1"
typer = {version = "^0.13.1", extras = ["all"]}
aiohttp = {version = "^3.10.11", extras = ["speedups"]}
fastapi = "^0.115.5"
uvicorn = {version = "^0.32.1", extras = ["standard"]}
aiogram = {version = "^3.15.0", extras = ["redis"]}
cryptography = "^43.0.3"

[tool.poetry.group.dev.dependencies]
mypy = {version = "^1.13.0", extras = ["dmypy"]}
types-aiofiles = "^24.1.0.20240626"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
