[project]
name = "vk-to-commerceml"
version = "0.1.0"
description = "Telegram bot that can synchronize VK products to a website using the CommerceML protocol"
authors = [
    { name = "Alexey Vaganov", email = "poofeg@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "aiogram[redis] (>=3.20.0.post0,<4.0.0)",
    "aiohttp[speedups] (>=3.11.18,<4.0.0)",
    "cryptography (>=45.0.4,<46.0.0)",
    "fastapi (>=0.115.13,<0.116.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.10.0,<3.0.0)",
    "pydantic-xml[lxml] (>=2.17.2,<3.0.0)",
    "typer[all] (>=0.16.0,<0.17.0)",
    "uvicorn[standard] (>=0.34.3,<0.35.0)",
]

[project.urls]
repository = "https://github.com/poofeg/vk-to-commerceml"

[tool.poetry.group.dev.dependencies]
mypy = {version = "^1.16.1", extras = ["dmypy"]}
types-aiofiles = "^24.1.0.20250606"
ruff = "^0.12.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
preview = true
select = [
    "E",
    "F",
    "I",
    "Q",
    "UP",
    "W",
]

[tool.mypy]
plugins = ["pydantic_xml.mypy"]
python_version = "3.13"
platform = "linux"
follow_imports = "normal"
ignore_missing_imports = false
mypy_path = "stubs"
strict = true
